--- a/cm006-exercise.Rmd
+++ b/cm006-exercise.Rmd
@@ -27,8 +27,8 @@ Load the `gapminder` and `tidyverse` packages. Hint: `suppressPackageStartupMess
     
 ```{r load packages, warning = FALSE, message = FALSE}
 # load your packages here:
-library(FILL_THIS_IN)
-library(FILL_THIS_IN)
+library(gapminder)
+library(tidyverse)
 ```
     
 
@@ -37,7 +37,7 @@ library(FILL_THIS_IN)
 1. Make a data frame containing the columns `year`, `lifeExp`, `country` from the gapminder data, in that order.
 
 ```{r}
-select(gapminder, FILL_THIS_IN)
+select(gapminder, year, lifeExp, country)
 ```
 
 
@@ -47,20 +47,20 @@ select(gapminder, FILL_THIS_IN)
 # This will work:
 select(gapminder, country, continent, year, lifeExp)
 # Better way:
-select(gapminder, FILL_THIS_IN)
+select(gapminder, country:lifeExp)
 ```
 
 
 3. Select all variables, except `lifeExp`.
 
 ```{r}
-select(gapminder, FILL_THIS_IN)
+select(gapminder, -lifeExp)
 ```
 
 4. Put `continent` first. Hint: use the `everything()` function.
 
 ```{r}
-select(gapminder, FILL_THIS_IN, FILL_THIS_IN)
+select(gapminder, continent, everything())
 ```
 
 
@@ -68,8 +68,9 @@ select(gapminder, FILL_THIS_IN, FILL_THIS_IN)
 
 ```{r}
 # compare
-select(gapminder, FILL_THIS_IN)
-rename(gapminder, FILL_THIS_IN)
+select(gapminder, cont = continent, everything())
+select(gapminder, gdpPercap:continent)
+rename(gapminder, cont = continent)
 ```
 
 
@@ -78,19 +79,19 @@ rename(gapminder, FILL_THIS_IN)
 1. Order by year.
 
 ```{r}
-arrange(gapminder, FILL_THIS_IN)
+arrange(gapminder, year)
 ```
 
 2. Order by year, in descending order.
 
 ```{r}
-arrange(gapminder, FILL_THIS_IN)
+arrange(gapminder, desc(year))
 ```
 
 3. Order by year, then by life expectancy.
 
 ```{r}
-arrange(gapminder, FILL_THIS_IN, FILL_THIS_IN)
+arrange(gapminder, desc(year), desc(lifeExp))
 ```
 
 ## Piping, `%>%` (8 min)
@@ -112,6 +113,13 @@ Now using with pipes:
 
 ```{r}
 # alter the below to include 2 "pipes"
+gapminder %>%
+  select(year, lifeExp, country) %>%
+  arrange(year, lifeExp)
+
+#Cmd+shift+M:shortcut for %>% 
+#execute one line of R code: Cmd+Return
+
 arrange(select(gapminder, year, lifeExp, country), year, lifeExp)
 ```
 
@@ -125,21 +133,23 @@ Return to guide at section 6.7.
 
 ```{r}
 gapminder %>%
-  filter(FILL_THIS_IN)
+  filter(pop > 100000000) 
 ```
 
 2. Your turn: of those rows filtered from step 1., only take data from Asia.
 
 ```{r}
 gapminder %>%
-  filter(FILL_THIS_IN)
+  filter(pop > 100000000, 
+         continent == "Asia") 
 ```
 
 3. Repeat 2, but take data from countries Brazil, and China. 
 
 ```{r}
 gapminder %>%
-  filter(FILL_THIS_IN)
+  filter(pop > 100000000,
+         country =='Brazil' | country == 'China')
 ```
 
 ## `mutate()` (10 min)
@@ -151,7 +161,11 @@ Let's get:
 
 ```{r}
 gapminder %>%
-  mutate(FILL_THIS_IN)
+  mutate(gdpBill = round(gdpPercap*pop/1000000000, digit=2))
+
+gapminder %>%
+  mutate(gdpBill = (gdpPercap*pop/1000000000) %>%  round(digit=2))
+#assign shortcut <- : opt + -
 ```
 
 Notice the backwards compatibility! No need for loops!
@@ -160,7 +174,8 @@ Try the same thing, but with `transmute` (drops all other variables).
 
 ```{r}
 gapminder %>%
-  transmute(FILL_THIS_IN)
+  transmute(gdpBill = gdpPercap*pop/1000000000)
+
 ```
 
 The `if_else` function is useful for changing certain elements in a data frame.
@@ -169,12 +184,14 @@ Example: Suppose Canada's 1952 life expectancy was mistakenly entered as 68.8 in
 
 ```{r}
 gapminder %>%
-  mutate(FILL_THIS_IN)
+  mutate(lifeExp = if_else(country == "Canada" & year == 1952, 70, lifeExp))
 ```
 
 Your turn: Make a new column called `cc` that pastes the country name followed by the continent, separated by a comma. (Hint: use the `paste` function with the `sep=", "` argument).
 
 ```{r}
+gapminder %>% 
+  mutate(cc = paste(country, sep = ","))
 ```
 
 These functions we've seen are called __vectorized functions__.
