finish cm010 exercise

--- a/weeks_3_to_5/cm009-exercise.rmd
+++ b/weeks_3_to_5/cm009-exercise.rmd
@@ -119,9 +119,9 @@ email %>%
 
 ```{r}
 n <- 100
-FILL_THIS_IN(label = FILL_THIS_IN,
-             FILL_THIS_IN = rnorm(n),
-             FILL_THIS_IN)
+tibble(label = "Sample A",
+             x = rnorm(n),
+             y = x + rnorm(n))
 ```
 
 
