--- a/weeks_3_to_7/cm014-exercise.rmd
+++ b/weeks_3_to_7/cm014-exercise.rmd
@@ -1,7 +1,9 @@
 ---
-title: "cm014 Worksheet: The Model-Fitting Paradigm in R"
-output: html_notebook
-editor_options: 
+title: 'cm014 Worksheet: The Model-Fitting Paradigm in R'
+output:
+  html_document:
+    df_print: paged
+editor_options:
   chunk_output_type: inline
 ---
 
